maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:8: error: '(' expected but '{' found.
		else if{
                       ^Escaper:11: error: illegal start of simple expression
	}
        ^