maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
	var virage = 0
	while (getY!=0){
		if(!estFaceMur&&getDirection()==Direction.NORD){
			avance
		}
		else if{
			suivre
		}
	}
	droite
	suivre
	prendBiscuit
}

def WallG():Boolean={
	gauche
	if(estFaceMur){
		droite 
		return true
	}
	else{
		droite
		return false
	}
	return false
}

def WallD():Boolean={
	droite
	if(estFaceMur){
		gauche
		return true
	}
	else{
		gauche
		return false
	}
	return false
}

def suivre(){
	while(virage!=0&&!estSurBiscuit){
		if(estFaceMur){
			if(!WallD){
				droite
				virage=virage+1
			}
			else if(!WallG){
				gauche
				virage=virage-1
			}
		}
		else{
			avance
		}

	}
}
